# sup

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
examples/: lambda_stack.json  s3_stack.json
src/: app.rs  localstack.rs  main.rs
src/ext/: rust.rs
src/localstack/aws/: apigateway.rs  dynamo.rs  kinesis.rs  lambda.rs  mod.rs  s3.rs  sns.rs  sqs.rs
src/stack/: mod.rs
src/stack/parser/: mod.rs
tests/: run.sh  stackfile.json
tests/integration/lambda/: stackfile.json  test.bats
tests/integration/lambda/dep_stack/: stackfile.json
tests/integration/lambda/dep_stack/go/: main.go
tests/integration/lambda/ruby/: handler.rb
tests/integration/lambda/stack/: stackfile.json
tests/integration/lambda/stack/nodejs/src/: index.js
tests/integration/s3/: stackfile.json  test.bats
