[package]
name = "lsup"
version = "0.1.0"
authors = ["Mahmoud G. <mhmoudgmal.89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3.1"
colored = "1.9"
